--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Generate configure script
+      run: autoreconf -i
     - name: configure
       run: ./configure
     - name: make
